--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <header>
         <h1>PARROT CARD GAME</h1>
     </header>
-    <div class="container">
-        
-    </div>
-
+    <div class="container"></div>
     <script src="/script/index.js"></script>
 </body>
 </html>
